# pyo3-playground

./: .taplo.toml  Cargo.toml  README.md  pyproject.toml
python/pyo3_playground/: __init__.py  backend.py  pyo3_playground.pyi
src/: lib.rs  main.rs
